--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "method": "none",
     "protocol": "auth_chain_d",
     "protocol_param": "",
-    "obfs": "tls1.2_ticket_auth",
+    "obfs": "tls1.2_ticket_auth_compatible",
     "obfs_param": "",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": 0,
