--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
     "server": "0.0.0.0",
     "server_ipv6": "::",
-    "server_port": 8388,
+    "server_port": 10000,
     "local_address": "127.0.0.1",
     "local_port": 1080,
 
-    "password": "m",
-    "method": "aes-128-ctr",
-    "protocol": "auth_aes128_md5",
+    "password": "MjI4MmFiNT",
+    "method": "none",
+    "protocol": "auth_chain_d",
     "protocol_param": "",
-    "obfs": "tls1.2_ticket_auth_compatible",
+    "obfs": "plain",
     "obfs_param": "",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": 0,
@@ -19,7 +19,7 @@
     "timeout": 120,
     "udp_timeout": 60,
     "dns_ipv6": false,
-    "connect_verbose_info": 0,
+    "connect_verbose_info": 1,
     "redirect": "",
     "fast_open": false
 }
